/*
 * Build file for Hypermedea as a software library (a set of CArtAgO components)
 *
 */
plugins {
    id 'java'
    id 'java-library'
    id 'maven-publish'
}

version '0.5'
group   'org.hypermedea'

java {
    toolchain {
        // ensures compatibility with JaCaMo 1.3.0
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    // artifact repository for JaCaMo-related project
    maven { url 'https://repo.gradle.org/gradle/libs-releases' }
    maven { url 'https://raw.github.com/jacamo-lang/mvn-repo/master' }
}

dependencies {
    compileOnly group: 'org.jacamo', name: 'jacamo', version: '1.3.0'
    testImplementation group: 'org.jacamo', name: 'jacamo', version: '1.3.0'

    // RDF dependencies
    implementation group: 'org.apache.jena', name: 'jena-core', version: '3.16.0'
    implementation group: 'org.apache.jena', name: 'jena-arq', version: '3.16.0'
    implementation group: 'org.apache.jena', name: 'jena-iri', version: '3.16.0'

    // XML dependencies
    implementation 'org.jsoup:jsoup:1.19.1'

    // HTTP dependencies
    implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'

    testImplementation("org.junit.jupiter:junit-jupiter:5.13.4")
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
}

test {
    useJUnitPlatform()
}

publishing {
    publications {
        hypermedea(MavenPublication) {
            groupId = group
            artifactId = 'hypermedea'
            version = version

            from components.java
        }
    }

    repositories {
        maven {
            name = 'Hypermedea'
            // assumes the hypermedea.github.io repo is cloned next to this repo
            url = "../..//hypermedea.github.io/maven"
        }
    }
}

/**
 * task to create a all-in-one jar that can be used as JaCaMo library
 */
task jacamoJar(type: Jar) {
    archiveClassifier = 'standalone'
    from sourceSets.main.output
    dependsOn configurations.runtimeClasspath
    from {
        configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { zipTree(it) }
    }
}

clean {
    delete 'bin'
    delete 'build'
    delete 'log'
}
